--- a/package.json
+++ b/package.json
@@ -11,9 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.11.14",
+    "@mui/styled-engine-sc": "^5.11.11",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
-    "react-swipeable": "^7.0.0"
+    "react-swipeable": "^7.0.0",
+    "styled-component": "^2.8.0"
   },
   "description": "",
   "browserslist": {
