--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "react-alice-carousel": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "react-swipeable": "^7.0.0"
