--- a/package.json
+++ b/package.json
@@ -11,24 +11,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
     "@mui/styled-engine-sc": "^5.11.11",
-
-    "react-alice-carousel": "^2.7.0",
-
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "react-swipeable": "^7.0.0",
-    "styled-component": "^2.8.0"
+    "styled-component": "^2.8.0",
+    "styled-components": "^5.3.9"
   },
-  "description": "",
+  "description": "A single page web application that allows users to create custom greetings cards",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -40,5 +38,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
