--- a/package.json
+++ b/package.json
@@ -11,17 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/material": "^5.11.14",
-    "@mui/styled-engine-sc": "^5.11.11",
+    "react": "^18.2.0",
     "react-alice-carousel": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
-    "react-resizable": "^3.0.5",
-    "react-resizable-box": "^2.1.0",
+    "react-rnd": "^10.4.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
     "react-swipeable": "^7.0.0",
