--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
     "@mui/styled-engine-sc": "^5.11.11",
+    "bootstrap": "^5.2.3",
+    "bulma": "^0.9.4",
     "html-to-image": "^1.11.11",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-rnd": "^10.4.1",
@@ -41,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.7"
   }
 }
