--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
     "react-swipeable": "^7.0.0",
-    "styled-component": "^2.8.0"
+    "styled-component": "^2.8.0",
+    "webfontloader": "^1.6.28"
   },
   "description": "",
   "browserslist": {
