--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.0",
     "react-bootstrap": "^2.7.2",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
+    "react-google-font-picker": "^0.9.3",
     "react-rnd": "^10.4.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
     "react-swipeable": "^7.0.0",
-    "styled-component": "^2.8.0",
-    "use-react-screenshot": "^3.0.0"
+    "styled-component": "^2.8.0"
   },
   "description": "",
   "browserslist": {
