--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@chakra-ui/react": "^2.5.4",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
@@ -22,6 +21,7 @@
     "bootstrap": "^5.2.3",
     "bulma": "^0.9.4",
     "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
     "inspector": "^0.5.0",
     "merge-images": "^2.0.0",
     "re-resizable": "^6.9.9",
@@ -30,7 +30,6 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
-    "react-google-font-picker": "^0.9.3",
     "react-rnd": "^10.4.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
