--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
+    "react-images-uploading": "^3.1.7",
     "react-rnd": "^10.4.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
